syntax = "proto3";
package chain4energy.c4echain.cfevesting;

import "gogoproto/gogo.proto";
import "cfevesting/params.proto";
import "cfevesting/vesting_types.proto";
import "cfevesting/account_vesting.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/chain4energy/c4e-chain/x/cfevesting/types";

// GenesisState defines the cfevesting module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
  VestingTypes vesting_types = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"vesting_types\""];

  AccountVestingsList account_vestings_list = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"account_vestings_list\""];

}
